--- a/staking.html
+++ b/staking.html
@@ -1,40 +1,114 @@
-<!-- staking.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VNS Staking</title>
-  <link rel="stylesheet" href="style.css">
-  <script defer src="script.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VNST Staking</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="data:,">
+    <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
 </head>
 <body>
-  <header class="navbar">
-    <img src="logo.png" alt="Logo" class="logo">
-    <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
-    <nav>
-      <ul id="nav-list">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="staking.html" class="active">Staking</a></li>
-        <li><a href="team.html">Team</a></li>
-      </ul>
+    <nav class="navbar">
+        <img src="logo.png" alt="Logo" class="logo">
+        <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+        <ul id="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="staking.html" class="active">Staking</a></li>
+            <li><a href="team.html">Team</a></li>
+            <li><button id="connectWalletNavBtn" class="wallet-connect-btn">Connect Wallet</button></li>
+        </ul>
     </nav>
-  </header>
 
-  <main>
-    <section class="content-section">
-      <h2>Stake Your VNS</h2>
-      <div class="card visible">
-        <p>Enter amount to stake:</p>
-        <input type="number" id="stakeAmount" placeholder="e.g. 100">
-        <button class="btn" id="stakeBtn">Stake</button>
-        <button class="wallet-connect-btn" id="connectWallet">Connect Wallet</button>
-      </div>
-    </section>
-  </main>
+    <main>
+        <section class="content-section">
+            <div id="walletConnectSection" class="card" style="text-align: center;">
+                <h3>Connect Your Wallet</h3>
+                <button id="connectWalletBtn" class="btn">Connect Wallet</button>
+            </div>
 
-  <footer>
-    <p>&copy; 2025 V Network Services. All rights reserved.</p>
-  </footer>
+            <div id="stakingDashboard" style="display: none;">
+                <div class="card">
+                    <h3>Your Wallet Address</h3>
+                    <div class="card-content">
+                        <p id="walletAddress">0x000...0000</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3>VNST Balance</h3>
+                    <div class="card-content">
+                        <p id="walletBalance">0 VNST</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3>Your Referral Link</h3>
+                    <div class="card-content" style="flex-direction: column;">
+                        <input type="text" id="referralLink" readonly style="width: 100%; padding: 0.5rem; margin-bottom: 1rem; text-align: center;">
+                        <div style="display: flex; gap: 1rem;">
+                            <button id="copyReferralBtn" class="btn">Copy Link</button>
+                            <button id="shareReferralBtn" class="btn">Share</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3>Stake VNST Tokens</h3>
+                    <div class="card-content" style="flex-direction: column;">
+                        <input type="number" id="stakeAmount" placeholder="Enter VNST amount" style="width: 100%; padding: 0.5rem; margin-bottom: 1rem;">
+                        <input type="text" id="referrerAddress" placeholder="Referrer Wallet Address (Required)" style="width: 100%; padding: 0.5rem; margin-bottom: 1rem;">
+                        <button id="stakeBtn" class="btn">Stake VNST</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3>Your Staking Stats</h3>
+                    <div class="card-content" style="flex-direction: column; gap: 1rem;">
+                        <div>
+                            <h4>Total Staked</h4>
+                            <p id="userTotalStaked">0 VNST</p>
+                        </div>
+                        <div>
+                            <h4>Total Withdrawn</h4>
+                            <p id="userTotalWithdrawn">0 VNST</p>
+                        </div>
+                        <div>
+                            <h4>Active Staking</h4>
+                            <p id="userActiveStaking">0 VNST</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3>Your Rewards</h3>
+                    <div class="card-content" style="flex-direction: column; gap: 1rem;">
+                        <div>
+                            <h4>Level 1 Direct Income</h4>
+                            <p id="level1Income">0 USDT</p>
+                        </div>
+                        <div>
+                            <h4>Level 2-5 Income</h4>
+                            <p id="level2to5Income">0 USDT</p>
+                        </div>
+                        <div>
+                            <h4>Daily ROI Reward</h4>
+                            <p id="dailyROI">0 USDT</p>
+                        </div>
+                        <div style="display: flex; gap: 1rem; margin-top: 1rem;">
+                            <button id="claimTokenBtn" class="btn">Claim Token Rewards</button>
+                            <button id="claimUsdtBtn" class="btn">Claim USDT Rewards</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 VNST Staking Platform. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
