--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
         <p>&copy; 2025 VNST Staking Platform. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
