--- a/staking.html
+++ b/staking.html
@@ -127,6 +127,6 @@
         <p>&copy; 2025 VNST Staking Platform. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
