--- a/team.html
+++ b/team.html
@@ -132,6 +132,6 @@
         <p>&copy; 2025 VNST Staking Platform. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
