--- a/staking.html
+++ b/staking.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="data:,">
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
+    
+    <style>
+        /* Temporary fix until CSS loads */
+        .content-section, #stakingDashboard, #teamDashboard {
+            display: block !important;
+        }
+        #walletConnectSection, #teamWalletConnect {
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <!-- Loading Indicator -->
